--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,9 @@
   z-index: 2;
 }
 
+.slide-bg-button:hover {
+  background-color: transparent;
+}
 .slide-bg-button:hover::before {
   width: 100%;
 }
@@ -37,7 +40,6 @@
   .smooth-edge {
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
   }
-
 
 
   @keyframes fadeInFromRight {
@@ -95,6 +97,7 @@
     font-style: normal;
     font-weight: 300;
     line-height: normal;
+    letter-spacing: 2px;
   }
 
   .default-link-text {
@@ -185,6 +188,6 @@
 /* This targets the track or groove of the scrollbar */
 ::-webkit-scrollbar-track {
   padding-top: 10px;
-  background: #D9D9D9; /* Change to desired scrollbar track color */
+  background: #2b2b2b; /* Change to desired scrollbar track color */
   border-radius: 5px;   /* Optional: Add if you want rounded scrollbar track */
 }
